tests/lexer/tinvalidintegerliteral2.nim
discard """
  errormsg: "invalid number"
  file: "tinvalidintegerliteral2.nim"
  line: 7
"""

echo 0x
